[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/lordhelpmeframes/epicexplostionwow0006-removebg-preview.png" type="Texture" id=1]
[ext_resource path="res://Sprites/lordhelpmeframes/epicexplostionwow0012-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://Sprites/lordhelpmeframes/epicexplostionwow0007-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://Sprites/lordhelpmeframes/epicexplostionwow0005-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://Scripts/BulletHellEnemy.gd" type="Script" id=6]
[ext_resource path="res://Sprites/lordhelpmeframes/epicexplostionwow0002-removebg-preview.png" type="Texture" id=7]
[ext_resource path="res://Sprites/lordhelpmeframes/epicexplostionwow0003-removebg-preview.png" type="Texture" id=8]
[ext_resource path="res://Sprites/lordhelpmeframes/epicexplostionwow0004-removebg-preview.png" type="Texture" id=9]
[ext_resource path="res://Sprites/lordhelpmeframes/epicexplostionwow0008-removebg-preview.png" type="Texture" id=10]
[ext_resource path="res://Sprites/lordhelpmeframes/epicexplostionwow0009-removebg-preview.png" type="Texture" id=11]
[ext_resource path="res://Sprites/lordhelpmeframes/epicexplostionwow0010-removebg-preview.png" type="Texture" id=12]
[ext_resource path="res://Sprites/lordhelpmeframes/epicexplostionwow0011-removebg-preview.png" type="Texture" id=13]
[ext_resource path="res://Sprites/lordhelpmeframes/epicexplostionwow0014-removebg-preview.png" type="Texture" id=14]
[ext_resource path="res://Sprites/lordhelpmeframes/epicexplostionwow0001-removebg-preview.png" type="Texture" id=17]
[ext_resource path="res://Sprites/lordhelpmeframes/epicexplostionwow0013-removebg-preview.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 3 ), ExtResource( 19 ), ExtResource( 14 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 108, 195.5 )

[node name="BossBulletHell" type="Node2D"]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.580392, 0, 0, 1 )
position = Vector2( -184, -203 )
scale = Vector2( 2.15867, 2.15867 )
frames = SubResource( 1 )

[node name="Rotater" type="Node2D" parent="."]

[node name="DeathToYOU" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="Immune" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Immune"]
position = Vector2( -13, 6 )
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DeathToYOU" to="." method="_on_DeathToYOU_timeout"]
